spec/clim/compile_time_error_spec/files/invalid_type/usage.cr
require "./../../../../../src/clim"

class MyCli < Clim
  main do
    usage true
    run do |opts, args|
    end
  end
end

MyCli.start(ARGV)
